hw4/k8s-deployment/yaml/back-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: swms-back
spec:
  ports:
  - port: 7070
    protocol: TCP
    targetPort: 7070
    name: http
  selector:
    app: back-pod
