hw4/k8s-deployment/yaml/front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  labels: 
    name: front-svc
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
    nodePort: 32001
  selector:
    app: front-pod
