hw4/k8s-deployment/yaml/back-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: back-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: www.test.com
    http:
      paths:
      - backend:
          serviceName: swms-back
          servicePort: 7070
